[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-EasyNodes"
version = "1.0.5"
description = "Makes creating new nodes for ComfyUI a breeze."
readme = "readme.md"
authors = [{ name = "Andrew Harp", email = "andrew.harp@gmail.com" }]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pillow",
    "colorama",
    "numpy",
    "openai",
]

[project.urls]
"Homepage" = "https://github.com/andrewharp/ComfyUI-EasyNodes"
"Bug Reports" = "https://github.com/andrewharp/ComfyUI-EasyNodes/issues"
"Source" = "https://github.com/andrewharp/ComfyUI-EasyNodes/"

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_nodes"]
exclude = ["web"]

[tool.setuptools.package-data]
"*" = ["web/**/*"]

[tool.poetry]
name = "comfyui-easynodes"
version = "1.0.5"
description = "Makes creating new nodes for ComfyUI a breeze."
authors = ["Andrew Harp <andrew.harp@gmail.com>"]
license = "MIT"
homepage = "https://github.com/andrewharp/ComfyUI-EasyNodes"
repository = "https://github.com/andrewharp/ComfyUI-EasyNodes"
documentation = "https://github.com/andrewharp/ComfyUI-EasyNodes"
readme = "readme.md"
packages = [{ include = "easy_nodes" }]
include = ["easy_nodes/web/**/*"]


[tool.poetry.dependencies]
python = ">=3.10"
torch = "*"
pillow = "*"
colorama = "*"
numpy = "*"
openai = "*"